feat: 🦾 Implementação da rota de deletar o livro
